[gd_scene load_steps=8 format=3 uid="uid://c2utkeo3r2t5w"]

[ext_resource type="Texture2D" uid="uid://chqlv6ad0235v" path="res://res/misc/grid_waite_in.png" id="1_i5258"]
[ext_resource type="FontFile" uid="uid://b658rsk8en8bo" path="res://res/font/LXGWWenKaiGBScreenR.ttf" id="1_mu4uq"]
[ext_resource type="Texture2D" uid="uid://dp201r3gg3cji" path="res://res/misc/grid_nine.png" id="1_odqox"]
[ext_resource type="Script" path="res://tscn/action_v.gd" id="2_7xifw"]

[sub_resource type="Animation" id="Animation_ktkdu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hvt8a"]
resource_name = "ready"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.945098, 0.262745, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xgky1"]
_data = {
"RESET": SubResource("Animation_ktkdu"),
"ready": SubResource("Animation_hvt8a")
}

[node name="ActionV" type="TextureButton"]
custom_minimum_size = Vector2(48, 192)
offset_right = 48.0
offset_bottom = 192.0
texture_normal = ExtResource("1_i5258")
script = ExtResource("2_7xifw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0941176, 0.137255, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_odqox")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -8
theme_override_fonts/font = ExtResource("1_mu4uq")
theme_override_font_sizes/font_size = 32
text = "御剑术"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 3
tint_progress = Color(0.0862745, 0.0941176, 0.137255, 0.929412)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xgky1")
}

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
